--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.5.13",
+    "@types/node": "^22.7.2",
+    "@types/react": "^18.3.9",
+    "@types/react-dom": "^18.3.0",
     "axios": "^1.7.7",
     "lodash.debounce": "^4.0.8",
     "qs": "^6.13.0",
@@ -18,6 +22,7 @@
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "sass": "^1.78.0",
+    "typescript": "^5.6.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
