--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@types/node": "^22.7.2",
     "@types/react": "^18.3.9",
     "@types/react-dom": "^18.3.0",
+    "ahooks": "^3.8.1",
     "axios": "^1.7.7",
+    "clsx": "^2.1.1",
     "lodash.debounce": "^4.0.8",
     "qs": "^6.13.0",
     "react": "^18.3.1",
